Added checkbox for login page

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <!-- <span class="input_coment">Phone Number</span> -->
           </div>
           <div class="input_container checkbox_container">
-            <span class="form_checkbox_checkmark"></span>
-
-            <input type="checkbox" name="KeepSignedIn" value="" class="form_checkbox" checked="checked">
-            <label>asdsadsa</label>
+            <div class="checkbox">
+                <input class="checkbox__input" type="checkbox" id="checkbox_1">
+                <label class="checkbox__label" for="checkbox_1">Keep me signed in</label>
+            </div>
           </div>
         </form>
 
