Login page inputs logic added(wo phone mask)

--- a/index.html
+++ b/index.html
@@ -19,15 +19,30 @@
 
           <div class="input_container input_container--country" id="countryInput">
 
-            <input type="text" name="country" value="" placeholder="Select country" class="form_default form_default--country">
+            <input type="text" name="country" autocomplete="off" value="" placeholder="Select country" class="form_default form_default--country">
             <img class="input_select_button" src='./icons/up_svg.svg' alt="">
             <label for="countryInput" class="inputLabel">Country</label>
+            <div class="country_list">
+              <ul>
+                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+93</span></li>
+                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Albania</span><span class="countryNum">+355</span></li>
+                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Algeria</span><span class="countryNum">+213</span></li>
+                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
+                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
+                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
+                <li class="countryItem">Afghanistan</li>
+                <li class="countryItem">Afghanistan</li>
+                <li class="Afghanistan">Afghanistan</li>
+                <li class="Albania">Afghanistan</li>
+                <li class="Algeria">Afghanistan</li>
+              </ul>
+            </div>
 
           </div>
 
           <div class="input_container input_container--phone" id="phoneInput">
 
-            <input type="text" name="phone" value="" placeholder="Your Phone" class="form_default">
+            <input type="tel" name="phone" value="" placeholder="Your Phone" class="form_default form_default--phone">
             <label for="phoneInput" class="inputLabel">Phone Number</label>
 
           </div>
