phone mask beta

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+93</span></li>
                 <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Albania</span><span class="countryNum">+355</span></li>
                 <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Algeria</span><span class="countryNum">+213</span></li>
-                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
+                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Russia</span><span class="countryNum">+7</span></li>
                 <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
                 <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
                 <li class="countryItem">Afghanistan</li>
@@ -42,7 +42,7 @@
 
           <div class="input_container input_container--phone" id="phoneInput">
 
-            <input type="tel" name="phone" value="" placeholder="Your Phone" class="form_default form_default--phone">
+            <input type="tel" name="phone" value="" autocomplete="off" maxlength="17" placeholder="Your Phone" class="form_default form_default--phone">
             <label for="phoneInput" class="inputLabel">Phone Number</label>
 
           </div>
@@ -56,10 +56,30 @@
 
           </div>
 
+          <div class="input_container submit_container">
+
+            <div class="form_default--next" value="NEXT">
+              <span>NEXT</span>
+            </div>
+
+          </div>
+
         </form>
 
 
 
+      </div>
+    </div>
+    <div class="login_page_wrap codePage">
+      <div class="container">
+        <div class="login_page_wrap_logo">
+          <img src="/Design/Monkey/" alt="">
+        </div>
+        <div class="input_container">
+
+          <input type="number" class="form_default form_default--code" placeholder="Code" name="Code" value="">
+
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="assets/js/loginPage.js"></script>
