login visual-part complete

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <label for="countryInput" class="inputLabel">Country</label>
             <div class="country_list">
               <ul>
-                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+93</span></li>
-                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Albania</span><span class="countryNum">+355</span></li>
-                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Algeria</span><span class="countryNum">+213</span></li>
-                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Russia</span><span class="countryNum">+7</span></li>
-                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
-                <li class="countryItem"><span class="countryFlag">f</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
+                <li class="countryItem"><span class="countryFlag">🇦🇫</span><span class="countryName">Afghanistan</span><span class="countryNum">+93</span></li>
+                <li class="countryItem"><span class="countryFlag">🇦🇱</span><span class="countryName">Albania</span><span class="countryNum">+355</span></li>
+                <li class="countryItem"><span class="countryFlag">🇩🇿</span><span class="countryName">Algeria</span><span class="countryNum">+213</span></li>
+                <li class="countryItem"><span class="countryFlag">🇷🇺</span><span class="countryName">Russia</span><span class="countryNum">+7</span></li>
+                <li class="countryItem"><span class="countryFlag">🇺🇸</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
+                <li class="countryItem"><span class="countryFlag">🇦🇫</span><span class="countryName">Afghanistan</span><span class="countryNum">+7</span></li>
                 <li class="countryItem">Afghanistan</li>
                 <li class="countryItem">Afghanistan</li>
                 <li class="Afghanistan">Afghanistan</li>
@@ -139,24 +139,41 @@
           </div>
           <div class="input_container input_container--lastName">
 
-            <input type="text" class="form_default form_default--lastName" autocomplete="on" maxlength="18" placeholder="Enter your last name" name="Name" value="" id="lastNameInput">
+            <input type="text" class="form_default form_default--lastName" autocomplete="on" maxlength="18" placeholder="Enter your last name (optional)" name="Name" value="" id="lastNameInput">
             <label class="inputLabel lastNameLabel" for="lastNameInput">Last Name (optional)</label>
 
           </div>
           <div class="input_container submit_container">
 
-            <div class="form_default--next" value="NEXT">
+            <div class="form_default--next form_default--start" value="NEXT">
               <span>START MESAGING</span>
             </div>
 
           </div>
         </div>
+
       </div>
+      <div class="addPhotoModule">
+        <div class="addPhotoBackground"></div>
+        <div class="addPhotoWindow">
+          <img class="addPhotoClose" src="./icons/close_svg.svg" alt="">
+          <span>Drag to Reposition</span>
+          <div class="addPhotoAvatarBackground"></div>
+          <img class="addPhotoAvatar" src="./icons/dog.jpg" alt="">
+          <div class="addPhotoCheckButton">
+            <img src="./icons/check_svg.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mainPage">
+      LOLOLOLOLO
     </div>
 
 
     <script type="text/javascript" src="assets/js/loginPage.js"></script>
-    <script type="text/javascript" src="urlFetch.js">
+    <!-- <script type="text/javascript" src="urlFetch.js"> -->
 
     </script>
   </body>
