--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
       LOLOLOLOLO
     </div>
 
-
+    <script type="text/javascript" src="assets/js/config.js"></script>
+    <script type="text/javascript" src="assets/js/controllers.js"></script>
     <script type="text/javascript" src="assets/js/loginPage.js"></script>
+
     <!-- <script type="text/javascript" src="urlFetch.js"> -->
 
     </script>
