mtproto alfa implementation

--- a/index.html
+++ b/index.html
@@ -171,12 +171,20 @@
       LOLOLOLOLO
     </div>
 
-    <script type="text/javascript" src="assets/js/config.js"></script>
-    <script type="text/javascript" src="assets/js/controllers.js"></script>
-    <script type="text/javascript" src="assets/js/loginPage.js"></script>
-
-    <!-- <script type="text/javascript" src="urlFetch.js"> -->
-
-    </script>
+    <script src="./assets/js/vendor/rusha.js"></script>
+    <script src="./assets/js/vendor/jsbn_combined.js"></script>
+    <script src="./assets/js/vendor/crypto.js"></script>
+    <script src="./assets/js/vendor/bigint.js"></script>
+    <script src="./assets/js/vendor/gunzip.min.js"></script>
+    <script src="assets/js/lib/tl_utils.js"></script>
+    <script src="assets/js/lib/bin_utils.js"></script>
+    <script src="assets/js/config.js"></script>
+    <!-- <script src="assets/js/controllers.js"></script> -->
+    <script src="assets/js/mtproto.js"></script>
+    <script src="assets/js/mtproto-call.js"></script>
+    <script src="assets/js/helpers.js"></script>
+    <script src="assets/js/loginPage.js"></script>
+    <!-- <script src="assets/js/app-state.js"></script> -->
+    <!-- <script type="text/javascript" src="urlFetch.js"></script> -->
   </body>
 </html>
